assets/css/ambulance.css
.ambulance .cover {
  padding: 70px 0;

  display: flex;
  align-items: center;
  justify-content: center;
}
.ambulance-right-cover {
  max-width: 50%;
}

.ambulance .screen-mobile {
  display: none;
}
.ambulance .subtitle {
  font-size: 14px;
  font-style: italic;
  line-height: 17.71px;
  letter-spacing: 5px;
  opacity: 0.5;
  color: var(--sce-dac);
  margin-bottom: 10px;
}
.ambulance-left-top {
  margin-bottom: 40px;
}
.ambulance .title {
  font-size: 40px;
  line-height: 50.6px;
  color: var(--sce-dac);
}
.ambulance-right {
  background-image: url("../images/ambulance.png");
  width: 500px;
  height: 500px;
  border-radius: 20px;
  background-size: cover;
  background-position: center;
  max-width: 100%;
}
.ambulance-left {
  width: Fixed (620px) px;
  height: Hug (269px) px;
  gap: 40px;
  opacity: 0px;
}
.ambulance-list {
  padding: 0;
  list-style: none;
}
.ambulance ul li {
  margin-bottom: 25px;
  font-size: 14px;
  color: var(--sce-dac);
}
.ambulance-list-cover {
  display: flex;
}
.ambulance-list .ambulance-list-style {
  background-image: url("../images/list-style.png");
  background-size: cover;
  width: 15px;
  height: 13px;
  margin-right: 15px;
}
.ambulance-list span {
  max-width: 70%;
}
@media (max-width: 770px) {
  .ambulance .screen-pc {
    display: none;
  }
  .ambulance .screen-mobile {
    display: block;
    margin-bottom: 0;
    text-align: center;
  }
  .ambulance .cover {
    flex-direction: column-reverse;
    justify-content: center;
    padding: 50px 24px;
  }
  .ambulance .subtitle {
    font-size: 12px;
  }
  .ambulance .title {
    font-size: 20px;
  }
  .ambulance-right {
    width: 300px;
    height: 300px;
    margin: 25px 0;
  }
  .ambulance-left {
    margin: 0;
  }
  .ambulance-right-cover {
    max-width: 100%;
  }
  .ambulance-list-cover {
    text-align: center;
    flex-direction: column;
    align-items: center;
  }
  .ambulance-list-style {
    width: 20px !important;
    height: 18px !important;
    margin-bottom: 15px;
  }
  .ambulance-list span {
    max-width: 100%;
  }
  .ambulance-left {
    max-width: 100%;
  }
}

